--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -20,6 +20,7 @@
     "rules": {
         "react/prop-types": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "react/jsx-props-no-spreading": "off"
     }
 }
