--- a/web/src/middleware/package.json
+++ b/web/src/middleware/package.json
@@ -1,6 +1,9 @@
 {
   "name": "middleware",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "mysql": "^2.18.1"
   }
 }
