--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "sass": "^1.49.7"
   }
 }
