--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
+    "firebase": "^9.6.6",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
