--- a/web/package.json
+++ b/web/package.json
@@ -17,5 +17,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "sass": "^1.49.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0"
   }
 }
