--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -21,6 +21,7 @@
         "react/prop-types": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-param-reassign": "off",
-        "react/jsx-props-no-spreading": "off"
+        "react/jsx-props-no-spreading": "off",
+        "linebreak-style": "off"
     }
 }
