--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.25.0",
     "firebase": "^9.6.6",
+    "form-data": "^4.0.0",
     "next": "latest",
     "react": "17.0.2",
     "react-alert": "^7.0.3",
